Redo 6.1 +> fixed some issues/ resolved the mobile overflow -> (recent/memeber layout kind of sorted + other two screens now have major overflowing

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -76,5 +76,15 @@ h1, h3, p {
   text-align: center;
 }
 
+.recent-arrow {
+  color: black;
+  text-align: center;
+  display: none;
+}
 
+//SETTINGS
 
+.strong-email, .strong-profile {
+  font-size: 13px;
+
+}
